--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,8 @@
     <string name="garis_lukis">Garis Lukis</string>
     <string name="bangun_ruang">Bangun Ruang</string>
     <string name="bangun_datar">Bangun Datar</string>
+
+    //other
     <string name="share">Share</string>
+    <string name="masukan_nomor">Masukan Semua Nomor Yang Akan Dihitung</string>
 </resources>
