adding Kubus Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="luas">Luas :</string>
     <string name="keliling">Keliling :</string>
     <string name="volume">Volume :</string>
-
+    <string name="hitung">Hitung</string>
 
     //atribute
     <string name="panjang">Panjang</string>
@@ -20,34 +20,10 @@
     <string name="alas">Alas</string>
     <string name="jari_jari">Jari - Jari</string>
     <string name="zero">0</string>
-
-    //bangun datar
-    <string name="persegi_panjang">Persegi Panjang</string>
-    <string name="lingkaran">Lingkaran</string>
-    <string name="segitiga">Segitiga</string>
-
-    //bangun ruang
-    <string name="balok">Balok</string>
-    <string name="bola">Bola</string>
-    <string name="tabung">Tabung</string>
-    <string name="luasKerucut">Kerucut</string>
-    <string name="default_text">Default Text</string>
-    <string name="polymorphism">Polymorphism</string>
-    <string name="garis_lukis">Garis Lukis</string>
-    <string name="bangun_ruang">Bangun Ruang</string>
-    <string name="bangun_datar">Bangun Datar</string>
-
-    //other
-    <string name="share">Share</string>
-    <string name="masukan_nomor">Masukan Semua Nomor Yang Akan Dihitung</string>
-    <string name="persegi">Persegi</string>
     <string name="sisi">Sisi</string>
-    <string name="hitung">Hitung</string>
     <string name="sisiA">Sisi A</string>
     <string name="sisiB">Sisi B</string>
     <string name="sisiC">Sisi C</string>
-    <string name="trapesium">Trapesium</string>
-    <string name="layang_layang">Layang Layang</string>
     <string name="sisiAB">Sisi AB</string>
     <string name="sisiCD">Sisi CD</string>
     <string name="sisiBC">Sisi BC</string>
@@ -56,5 +32,32 @@
     <string name="diagonal_vertical">Diagonal Vertikal</string>
     <string name="sisi_satu">Sisi 1</string>
     <string name="sisi_dua">Sisi 2</string>
+    <string name="rusuk">Rusuk</string>
+    <string name="luas_permukaan">Luas Permukaan</string>
+
+    //bangun datar
+    <string name="bangun_datar">Bangun Datar</string>
+    <string name="persegi_panjang">Persegi Panjang</string>
+    <string name="lingkaran">Lingkaran</string>
+    <string name="segitiga">Segitiga</string>
+    <string name="persegi">Persegi</string>
+    <string name="trapesium">Trapesium</string>
+    <string name="layang_layang">Layang Layang</string>
     <string name="belah_ketupat">Belah Ketupat</string>
+
+    //bangun ruang
+    <string name="balok">Balok</string>
+    <string name="bola">Bola</string>
+    <string name="tabung">Tabung</string>
+    <string name="kubus">Kubus</string>
+    <string name="luasKerucut">Kerucut</string>
+    <string name="default_text">Default Text</string>
+    <string name="polymorphism">Polymorphism</string>
+    <string name="garis_lukis">Garis Lukis</string>
+    <string name="bangun_ruang">Bangun Ruang</string>
+
+    //other
+    <string name="share">Share</string>
+    <string name="masukan_nomor">Masukan Semua Nomor Yang Akan Dihitung</string>
+
 </resources>
